--- a/style.css
+++ b/style.css
@@ -1,26 +1,40 @@
 body{
+    margin: 0;
+    padding: 0;
     display: flex;
+    height: 100%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+    font-family: 'Nunito', sans-serif;
+    background-color: rgb(252, 239, 223);
 }
-/*
-.container-btn{
-    background-color: rgb(198, 185, 185);
-    display: flex;
-    height: 100px;
-    width: 250px;
-    align-items: center;
-    justify-content: center;
-    border-radius: 20px;
-}*/
+
+img{
+    width: 100%;
+    height: 70px;
+    background: transparent;
+}
+
+section{
+    text-align: center;
+    width: 100%;
+    color: white;
+    background-color: rgb(29, 54, 69);
+    margin-bottom: 10px;
+}
+
+.reload{
+    margin-top: 5px;
+    font-size: 40px;
+    width: 260px;
+}
 
 
 button{
     color: #fff;
     font-size: 16px;
-    background-color: rgb(29, 54, 69);
+    background-color: rgb(70, 98, 117);
     margin: 5px;
     padding: 10px;
     border: none;
@@ -30,11 +44,34 @@ button{
 button:hover{
     background-color: orange;
     transition: 0.2s;
-    padding: 11px;
 }
 
 p{
-    transition: 0.2s;
     font-size: 20px;
 }
+
+#score-container{
+    display: flex;
+    justify-content: space-around;
+    margin: 10px;
+}
+
+
+h3{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.player-pc{
+    display: flex;
+    margin: 10px;
+};
+
+i{
+    color: black;
+}
+
+
+
+
 
